--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.12.3",
     "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
